tool/k8s/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8s-combat
  name: k8s-combat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-combat
  template:
    metadata:
      labels:
        app: k8s-combat
    spec:
      containers:
        - name: k8s-combat
          image: bluebird89/k8s-combat:v3
          imagePullPolicy: Always
          volumeMounts:
            - name: app
              mountPath: "/go/bin/app.yaml"
              # configmap's key
              subPath: APP
          # Define all the ConfigMap's data as container environment variables
          resources:
            limits:
              cpu: "1"
              memory: 300Mi
            requests:
              cpu: "0.1"
              memory: 100Mi
      volumes:
        - name: app
          configMap:
            # configmap's name
            name: k8s-combat-configmap
